Responsive styles added for TOC and Brandi's blog post
For max-width of 992px.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <section class="container-fluid toc clearfix" id="toc">
 	<div class="row">
-		<div class="col-md-4 toc-nca">
+		<div class="col-xs-4 col-md-4 toc-nca">
 			<div class="toc-bg-container">
 				<div class="toc-nca-bg"></div>
 			</div>
@@ -57,7 +57,7 @@
 	    		<li><a href="#kid-attractions">8 Must-See Kid-Friendly Attractions</a></li>
 	  		</ul>
 		</div>
-		<div class="col-md-4 toc-cca">
+		<div class="col-xs-4 col-md-4 toc-cca">
 			<div class="toc-bg-container">
 				<div class="toc-cca-bg"></div>
 			</div>
@@ -78,7 +78,7 @@
 	    		<li><a href="#article-eats">#EEEEEATS: Family-Friendly Spots in Central California</a></li>
 	  		</ul>
 		</div>
-		<div class="col-md-4 toc-sca">
+		<div class="col-xs-4 col-md-4 toc-sca">
 			<div class="toc-bg-container">
 				<div class="toc-sca-bg"></div>
 			</div>
@@ -191,7 +191,7 @@
 <section class="bg-img-container-wrap blog" id="nrthrn-blog-post">
 	<div class="container-fluid article blogger-post">
 		<div class="row">
-			<div class="col-md-9">
+			<div class="col-xs-10 col-md-9">
 				<h1>Brandi's Guide To Northern California</h1>
 				<h2>The mama behind <span class="italc">Mama Knows It All</span> shares her favorite places to play with her family.</h2>
 				<div class="blogger-profile-wrap clearfix">
@@ -214,7 +214,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<p>Thanks to my father’s military status, I was very fortunate to be able to travel the world when I was growing up. No place I’ve been, however, compares to Northern California. Friendly folks who feel like neighbors, the influence of many diverse cultures, and a chill vibe make it easy for anyone to feel comfortable here. Five years ago, when I first visited the region, I dreamed that I could one day call it home. Three years ago, that dream became a reality, and I’m so proud to raise my daughter here and call Oakland, California my forever home!</p>
 				<p>There’s nothing to not love about where I live. From the awesome weather year round to the abundance of fun family activities, it’s no wonder that my friends and family all start concocting plans to relocate after vacationing here. It doesn’t hurt that I know all of the best places to take them to make them fall in love with our neck of the woods (or beach, or city...more on that later!). Northern California, the Bay Area in particular, is the ultimate family playground. Whether you have one child like I do, or a whole group of them, there’s plenty to keep your entire family happy.</p>
 				<p>Because there’s so much to do here, it’s easy to be overwhelmed by the choices. Don’t worry, Mama Knows It All has you covered! If you’re visiting the area for the first time, or you live here but want to get out and explore more, here’s a three-day itinerary that will help you cover the most ground...and have the most fun in Northern California!</p>
@@ -223,7 +223,7 @@
 				<h3>Oakland and Berkeley</h3>
 				<p>I know, I know, everyone loves San Francisco. I do, too! You don’t have to rush into the city during your Northern California visit, though. In fact, it’s a good idea to pace yourself, especially if you’re traveling with children. Starting in San Francisco’s neighboring cities, Oakland and Berkeley, is a great way to start your vacation, and set the tone for the trip. Besides, they’re both extraordinarily family-friendly, with plenty to do and lots to keep the kiddos occupied and engaged.</p>
 			</div>
-			<div class="col-md-5 col-md-offset-1">
+			<div class="col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
 				<img class="animateblock btm" src="images/brandi/oakland.jpg">
 				<div class="caption">
 					<p>Oakland at night. <span class="italc cred inline">Getty Images</span></p>
@@ -231,10 +231,10 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-7">
+			<div class="col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/brandi/Brandi1.jpg">
 			</div>
-			<div class="col-md-5">
+			<div class="col-xs-5 col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
@@ -254,7 +254,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<h5>Children’s Fairyland</h5>
 				<p>Our family first fell in love with Children’s Fairyland on our first visit to Oakland. Super-duper kid-friendly, this fairytale-themed amusement park will be loved by children of all ages. Ride the Jolly Trolly Train, sit in on a puppet show, or meet new animal friends in the menagerie. You can experience the entire park in just a couple of hours, which leaves plenty of time for you to keep exploring.</p>
 				<h5>Jack London Square</h5>
@@ -264,12 +264,12 @@
 				<h5>Shorebird Park Nature Center and Adventure Playground</h5>
 				<p>When you get your second wind, take the family to Shorebird Park Nature Center and Adventure Playground for another interesting experience.  A quintessentially Berkeley attraction, this park is unlike any playground you’ve ever been to. There's a zip line that kids and adults can ride on, and opportunities for children to build things with real hammers and nails, and to use paint to decorate their very own fort. The Shorebird Park Nature Center and Adventure Playground might be your kiddo’s favorite part of the entire day!</p>
 			</div>
-			<div class="col-md-5 col-md-offset-1">
+			<div class="col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
 				<img class="sect-break under animateblock btm" src="images/brandi/Brandi2.jpg">
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<h4>Day 2</h4>
 				<h3>San Francisco</h3>
 				<p>The starlet of Northern California is obviously San Francisco. It’s one of the most visited cities in the world. If you’re in the region, you absolutely cannot miss it. If you start in Oakland, you can take the ferry from Jack London Square over to Fisherman’s Wharf for an exciting beginning to a day in the city. Even if you don't take the ferry, BART is a super affordable way to get into San Francisco, or you can leave the car at one of the many parking garages that are available.</p>
@@ -279,10 +279,10 @@
 	<div data-readmore>
 		<div class="container-fluid article blogger-post">
 			<div class="row">
-				<div class="col-md-7">
+				<div class="col-xs-7 col-md-7">
 					<img class="over animateblock btm" src="images/brandi/Brandi3.jpg">
 				</div>
-				<div class="col-md-5">
+				<div class="col-xs-5 col-md-5">
 					<div class="caption">
 						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 							<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
@@ -302,7 +302,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-xs-6 col-md-6">
 					<h5>Fisherman’s Wharf</h5>
 					<p>No matter what your plans are, Fisherman’s Wharf has to be on your agenda. There’s so much to do there! You can see some ships, get a glimpse of Alcatraz, and watch the sea lions sunbathe or play. I have to warn you, though: It might be hard to drag the family to the next attraction after they see the sea lions! They’re just so darn interesting to watch!</p>
 					<h5>Chinatown</h5>
@@ -311,12 +311,12 @@
 					<p>Since it’s one of the most iconic bridges in the country, you have to go over the Golden Gate bridge if you’re in Northern California. Every few weeks I try to sweet-talk my husband into driving me over the bridge because I absolutely love the views! Not only will your kids be impressed by the sheer size and beauty of the bridge, but it takes you to one of the most lovely little cities in our area.</p>
 					<h5>Sausalito</h5>
 				</div>
-				<div class="col-md-5 col-md-offset-1">
+				<div class="col-md-5 col-md-offset-1 col-xs-5 col-xs-offset-1">
 					<img class="sect-break under animateblock btm" src="images/brandi/Brandi4.jpg">
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-xs-6 col-md-6">
 					<p>After you drive over the Golden Gate Bridge, make your way to the Bay Area Discovery Museum. With its focus on imagination, creativity, and STEM activities, even the adults in the family will be engaged at the museum. There are often special events going on, so make sure you check the museum calendar before you go. After you leave, check out some of the shops in downtown Sausalito, and sit down for lunch at one of the many family-friendly restaurants in the area.</p>
 					<h5>Treasure Island</h5>
 					<p>To end your day, head over to Treasure Island, right at the end of the Bay Bridge, to watch the sunset. You won’t find a better view of San Francisco anywhere else. It’ll be the perfect close to a fun-filled day, and a memory that you’ll never, ever forget!</p>
@@ -327,7 +327,7 @@
 					<h5>Yosemite National Park</h5>
 					<p>If you are coming to Northern California and you only have a few days, you MUST go to Yosemite National Park. It’s a 2.5-hour drive from Oakland, so if you start early in the morning, you'll have plenty of time to explore. One of the greatest parks in our country, Yosemite is absolutely breathtaking. When you and your family experience the amazing valley and beautiful waterfalls, you’ll be reminded of how beautiful our country truly is.</p>
 				</div>
-				<div class="col-md-5 col-md-offset-1">
+				<div class="col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
 					<img class="animateblock btm" src="images/brandi/Supplied-Brandi5.jpg">
 					<div class="caption">
 						<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
@@ -336,7 +336,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-7">
+				<div class="col-xs-7 col-md-7">
 					<img class="over animateblock btm" src="images/brandi/yosemite.jpg">
 					<div class="caption">
 						<p class="italc cred inline">Getty Images</p>
@@ -344,7 +344,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-xs-6 col-md-6">
 					<h6>Option #2: Santa Cruz</h6>
 					<h5>Santa Cruz Beach Boardwalk</h5>
 					<p>When I lived on the East Coast, one of my favorite things to do with my daughter was take a bus to the shore and hang out at the beach. Our version of that is the Santa Cruz Beach Boardwalk with its classic amusements, rides, and attractions. There’s a Ferris wheel, games, miniature golf, and great beach-themed foods. Your family will have the best time at the Santa Cruz Boardwalk!</p>
