Some mobile styles added
For blog post.

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 				<h3>Oakland and Berkeley</h3>
 				<p>I know, I know, everyone loves San Francisco. I do, too! You don’t have to rush into the city during your Northern California visit, though. In fact, it’s a good idea to pace yourself, especially if you’re traveling with children. Starting in San Francisco’s neighboring cities, Oakland and Berkeley, is a great way to start your vacation, and set the tone for the trip. Besides, they’re both extraordinarily family-friendly, with plenty to do and lots to keep the kiddos occupied and engaged.</p>
 			</div>
-			<div class="col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
+			<div class="xs-display-none col-md-5 col-md-offset-1">
 				<img class="animateblock btm" src="images/brandi/oakland.jpg">
 				<div class="caption">
 					<p>Oakland at night. <span class="italc cred inline">Getty Images</span></p>
@@ -312,7 +312,7 @@
 					<h5>Sausalito</h5>
 				</div>
 				<div class="col-md-5 col-md-offset-1 col-xs-5 col-xs-offset-1">
-					<img class="sect-break under animateblock btm" src="images/brandi/Brandi4.jpg">
+					<img class="xs-display-none sect-break under animateblock btm" src="images/brandi/Brandi4.jpg">
 				</div>
 			</div>
 			<div class="row">
@@ -328,7 +328,7 @@
 					<p>If you are coming to Northern California and you only have a few days, you MUST go to Yosemite National Park. It’s a 2.5-hour drive from Oakland, so if you start early in the morning, you'll have plenty of time to explore. One of the greatest parks in our country, Yosemite is absolutely breathtaking. When you and your family experience the amazing valley and beautiful waterfalls, you’ll be reminded of how beautiful our country truly is.</p>
 				</div>
 				<div class="col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
-					<img class="animateblock btm" src="images/brandi/Supplied-Brandi5.jpg">
+					<img class="animateblock btm xs-display-none" src="images/brandi/Supplied-Brandi5.jpg">
 					<div class="caption">
 						<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
 						<p class="italc cred">Getty Images</p>
@@ -377,7 +377,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
+			<div class="col-xs-8 col-xs-offset-2 col-md-8 col-md-offset-2">
 				<h2>Northern California offers some of the most stunning and diverse campsites in the world—explore these six options.</h2>
 				<p>Whether you want to sleep at the feet of giants in Redwoods National Park or wake up at the water’s edge in Lake Tahoe, adventure seekers will marvel at Northern California’s options. From off-the-grid rustic sites to the ultimate glamping experience, here are six options for planning your next camping excursion.</p>
 			</div>
