Styles added to all blog posts.

--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
 <section class="bg-img-container-wrap" id="cntrl-blog-post">
 	<div class="container-fluid article blogger-post">
 		<div class="row">
-			<div class="col-md-9">
+			<div class="col-xs-10 col-md-9">
 				<h1>Pattie's Guide To Central California</h1>
 				<h2>The mama behind Living Mi Vida Loca shares her favorite Central California spots.</h2>
 				<div class="blogger-profile-wrap clearfix">
@@ -867,7 +867,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<p>We love visiting Central California because it gives us a beautiful mix of the ocean, the mountains, and farm life. It offers some of the best wineries on the West Coast, has little-known towns, and features fun little eateries sprinkled throughout the coast. Now that summer is coming up, we’ve started planning our next family road trip up to Central California, and it includes a handful of adventure-filled stops. The Central Valley and the Central Coast are where we’ll be spending the majority of our time because they’re both just a short drive away from Los Angeles. Want to plan your own Central California road trip and need ideas? Read on for our three-day family road trip itinerary!</p>
 				<h4>Day 1</h4>
 				<h3>Santa Barbara</h3>
@@ -878,7 +878,7 @@
 				<h3>Solvang</h3>
 				<p>About an hour away from Santa Barbara is a quaint little town called Solvang. Driving into Solvang will make you feel as though you’re stepping back in time. You will immediately get the small-town feel (it has a population of about 5,500) as you drive down its one major road and past its mom-and-pop shops and well-known bakeries. Founded by a group of Danes in 1911, the town gives you the feeling that it hasn’t changed much since then.</p>
 			</div>
-			<div class="col-md-5 col-md-offset-1">
+			<div class="xs-display-none col-md-5 col-md-offset-1">
 				<img class="animateblock btm" src="images/pattie/visiting-oceanside.jpg">
 				<div class="caption">
 					<p>Pattie and her crew strike a pose on a jetty.
@@ -887,10 +887,10 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-7">
+			<div class="col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/pattie/solvang.jpg">
 			</div>
-			<div class="col-md-5">
+			<div class="col-xs-5 col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
@@ -902,7 +902,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<p>Solvang is still home to bakeries, restaurants, and merchants who have continued to offer a taste of Denmark through its food, landscape, and museums.</p>
 				<h5>You can find us at...</h5>
 				<p>shoe store trying on a pair of clogs, the local bookstore peeking into the Hans Christian Andersen museum upstairs, and, of course, around Copenhagen replicas like the Little Mermaid statue and the Round Tower, taking family pictures. We’ll also be stopping by Old Mission Santa Inés near the center of town. Just outside of Solvang, we’ll stop by OstrichLand USA—a ranch where visitors can see ostriches, feed them, and even buy their eggs!</p>
@@ -914,7 +914,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-7">
+			<div class="col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/pattie/central-valley.jpg">
 			</div>
 			<div class="col-md-5">
@@ -937,10 +937,10 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<p>Central California is a wonderful region of the Golden State, with the ocean and mountains surrounding the family-owned farms and quaint towns that you’ll run into simply by driving down the scenic highways. Families can always find something that they enjoy doing. Whether we choose a day at the beach, a tour of historic missions, or fruit picking at a farm, Central California will give us three days of fun, great meals, and bonding moments that will carry us into our future California travels.</p>
 			</div>
-			<div class="col-md-5 col-md-offset-1">
+			<div class="col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
 				<img class="sect-break under animateblock btm" src="images/pattie/supplied_pattie_2.jpg">
 			</div>
 		</div>
@@ -1316,7 +1316,7 @@
 <section class="bg-img-container-wrap" id="sthrn-blog-post">
 	<div class="container-fluid article blogger-post">
 		<div class="row">
-			<div class="col-md-9">
+			<div class="col-xs-10 col-md-9">
 				<h1>Justine’s Guide to Southern California</h1>
 				<h2>The mama behind The Typical Mom shares 25 of her favorite places to play with the family.</h2>
 				<div class="blogger-profile-wrap clearfix">
@@ -1339,7 +1339,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<p>I have lived in California almost my entire life, and I couldn’t imagine raising my kids anywhere else! Southern California is unique because you can visit the beach, go to Disneyland, or play in the snow, usually within a two hour drive….you really can’t find that anywhere else! If you haven’t visited the Golden State yet, let us show you around. Here are 25 of our favorite spots with a lot of hidden gems in between!</p>
 				<p>Let’s start with the fabulous amusement parks you will find here in Southern California. You can’t pass these by:</p>
 				<h4>1</h4>
@@ -1355,7 +1355,7 @@
 				<h3>Universal Studios Hollywood</h3>
 				<p>A really fun place for rides and live entertainment featuring your favorite movie characters, and their studio tour is amazing. We love seeing where some of our favorite movies were filmed!</p>
 			</div>
-			<div class="col-md-5 col-md-offset-1">
+			<div class="xs-display-none col-md-5 col-md-offset-1">
 				<img class="animateblock btm" src="images/justine/KnottsBerryFarm.jpg">
 				<div class="caption">
 					<p>Camp Snoopy at Knott's Berry Farm. <span class="italc cred inline">Getty Images</span></p>
@@ -1363,10 +1363,10 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-7">
+			<div class="col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/justine/simpsons-universal.jpg">
 			</div>
-			<div class="col-md-5">
+			<div class="col-xs-5 col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
@@ -1386,7 +1386,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<h4>5</h4>
 				<h3>LEGOLAND</h3>
 				<p>A fun place for younger kids, especially those who love building! There are not only fun rides at LEGOLAND but building stations, a great waterpark, and Sea Life Aquarium adjacent to the park as well. It’s fascinating what they’ve made out of LEGO bricks!</p>
@@ -1407,18 +1407,18 @@
 				<h3>Tide Pools</h3>
 				<p>We love visiting the many tide pools in Southern California! One of our favorite spots is in <a href="http://temeculablogs.com/la-jolla-tide-pools/">La Jolla, called Children’s Pool</a>. There’s a beach where you can look for small sea creatures and get up close and personal with the harbor seals and sea lions, who love to sun themselves!</p>
 			</div>
-			<div class="col-md-5 col-md-offset-1">
+			<div class="xs-display-none col-md-5 col-md-offset-1">
 				<img class="sect-break under animateblock btm" src="images/justine/legoland.jpg">
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-7">
+			<div class="col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/justine/supplied_justine_2.jpg">
 			</div>
-			<div class="col-md-5 r-rail-above">
+			<div class="xs-display-none r-rail-above">
 				<img class="sect-break under animateblock btm" src="images/justine/supplied_justine_1.jpg">
 			</div>
-			<div class="col-md-5">
+			<div class="col-xs-5 col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
@@ -1438,7 +1438,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<h4>11</h4>
 				<h3>Ocean Institute</h3>
 				<p>If you’re coming to Southern California to visit the ocean and all it has to offer, this is a great place to visit in Dana Point! They offer hands-on exploration, and taking a whale-watching trip is a must, too…it’s amazing!</p>
@@ -1448,7 +1448,7 @@
 	<div data-readmore>
 	<div class="container-fluid article blogger-post">
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<h4>12</h4>
 				<h3>Huntington Beach Adventure Playground</h3>
 				<p>This is a hidden gem! If your childhood included playing in mud puddles, sliding down slippery slopes with your friends, and not caring about how dirty you got….your kids will get to experience that kind of down-home fun here too!</p>
@@ -1461,10 +1461,10 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-7">
+			<div class="col-xs-7 col-md-7">
 				<img class="animateblock btm" src="images/justine/san_clemente.jpg">
 			</div>
-			<div class="col-md-5">
+			<div class="col-xs-5 col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
@@ -1475,7 +1475,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<p class="italc">If you’re an animal lover and you’re looking for fun places in Southern California to visit them, there are several locations, both big and small.</p>
 				<h4>15</h4>
 				<h3>San Diego Zoo Safari Park</h3>
@@ -1486,7 +1486,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<h4>17</h4>
 				<h3>Bates Nut Farm</h3>
 				<p>Our favorite hidden gem!! My kids love feeding animals, seasonal festivals, and large fields where we can have a picnic and run free. Bates offers all of these things! Each season offers something new with a small-town feel, and it’s become our tradition each October to pick pumpkins right off the vine!</p>
@@ -1508,7 +1508,7 @@
 				<h3>Santa Rosa Plateau</h3>
 				<p>Our all-time favorite place to hike! Gorgeous isn’t a big enough word to describe this area. There are many trails to choose from and it’s fairly flat, so it’s easy for children to join the fun! We pack a picnic and head out for an afternoon together often, and we always see something new.</p>
 			</div>
-			<div class="col-md-5 col-md-offset-1">
+			<div class="xs-display-none col-md-5 col-md-offset-1">
 				<img class="sect-break under animateblock btm" src="images/justine/supplied_justine_6.jpg">
 				<div class="caption">
 					<p>Bates Nut Farm.<span class="italc cred inline">Getty Images</span></p>
@@ -1516,13 +1516,13 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-7">
+			<div class="col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/justine/supplied_justine_3.jpg">
 			</div>
-			<div class="col-md-5 r-rail-above">
+			<div class="xs-display-none r-rail-above">
 				<img class="sect-break under animateblock btm" src="images/justine/idyllwild.jpg">
 			</div>
-			<div class="col-md-5">
+			<div class="col-xs-5 col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
@@ -1542,7 +1542,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<h4>23</h4>
 				<h3>Julian</h3>
 				<p>Another hidden gem! We love finding small quaint towns like this one and just making a day trip of it. It’s a great little place to stay at a bed-and-breakfast, explore the beautiful woody area, visit their underground candy mine, and have a slice of their noteworthy apple pie!</p>
