--- a/index.html
+++ b/index.html
@@ -363,12 +363,7 @@
 </section> 
 
 <!-- CAMP CA -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 14.3925 16.241)" class="letter">N</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/nrthrn-sect-icon.svg">
 <section class="bg-img-container-wrap northern" id="camp-ca">
 	<div class="container-fluid article">
 		<div class="row">
@@ -533,12 +528,7 @@
 </section>
 
 <!-- PHOTO OP -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 14.3925 16.241)" class="letter">N</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/nrthrn-sect-icon.svg">
 <section class="bg-img-container-wrap northern" id="photo-op">
 	<div class="container-fluid article">
 		<div class="row">
@@ -599,12 +589,7 @@
 </section>
 
 <!-- ROAD TRIP -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 14.3925 16.241)" class="letter">N</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/nrthrn-sect-icon.svg">
 <section class="bg-img-container-wrap northern" id="article-roadtrip">
 	<div class="container-fluid article">
 		<div class="row">
@@ -711,12 +696,7 @@
 </section>
 
 <!-- KID ATTRACTIONS -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 14.3925 16.241)" class="letter">N</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/nrthrn-sect-icon.svg">
 <section class="bg-img-container-wrap northern" id="kid-attractions">
 	<div class="container-fluid article">
 		<div class="row">
@@ -957,12 +937,7 @@
 </section> 
 
 <!-- Edu(va)cation -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 15.1928 16.241)" class="letter">C</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/cntrl-sect-icon.svg">
 <section class="bg-img-container-wrap central" id="eduvacation">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1045,12 +1020,7 @@
 </section>
 
 <!-- Meet Central California -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 15.1928 16.241)" class="letter">C</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/cntrl-sect-icon.svg">
 <section class="bg-img-container-wrap central" id="article-meet-cca">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1171,12 +1141,7 @@
 </section> 
 
 <!-- Must-See Parks -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 15.1928 16.241)" class="letter">C</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/cntrl-sect-icon.svg">
 <section class="bg-img-container-wrap central" id="must-see-parks">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1241,12 +1206,7 @@
 </section>
 
 <!-- #EEATS -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 15.1928 16.241)" class="letter">C</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/cntrl-sect-icon.svg">
 <section class="bg-img-container-wrap central" id="article-eats">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1424,7 +1384,7 @@
 			<div class="col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/justine/supplied_justine_2.jpg">
 			</div>
-			<div class="xs-display-none r-rail-above">
+			<div class="xs-display-none col-md-5 r-rail-above">
 				<img class="sect-break under animateblock btm" src="images/justine/supplied_justine_1.jpg">
 			</div>
 			<div class="col-xs-5 col-md-5">
@@ -1528,7 +1488,7 @@
 			<div class="col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/justine/supplied_justine_3.jpg">
 			</div>
-			<div class="xs-display-none r-rail-above">
+			<div class="xs-display-none col-md-5 r-rail-above">
 				<img class="sect-break under animateblock btm" src="images/justine/idyllwild.jpg">
 			</div>
 			<div class="col-xs-5 col-md-5">
@@ -1570,12 +1530,7 @@
 </section> 
 
 <!-- Theme Parks -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/sthrn-sect-icon.svg">
 <section class="bg-img-container-wrap southern" id="theme-parks">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1690,12 +1645,7 @@
 </section>
 
 <!-- Surf 'n Skate' -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/sthrn-sect-icon.svg">
 <section class="bg-img-container-wrap southern" id="article-surf-skate">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1774,12 +1724,7 @@
 </section>
 
 <!-- Kid Beaches -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/sthrn-sect-icon.svg">
 <section class="bg-img-container-wrap southern" id="kid-beaches">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1868,12 +1813,7 @@
 </section>
 
 <!-- BELLA VIDEO -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/sthrn-sect-icon.svg">
 <section class="bg-img-container-wrap southern" id="video-bella">
 	<div class="container-fluid article">
 		<div class="row">
