Mobile Nav Styled and Fixed
-functionality on clicking from one menu to the next

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 </section>
 
 <section class="sticky-nav clearfix" id="sticky-nav">
+<div id="desktop-nav">
 	<div class="dropdown">
 	  <button class="btn dropdown-toggle nav-nca" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 	    <span class="nav-explore">EXPLORE</span> NORTHERN CALIFORNIA
@@ -176,6 +177,76 @@
 	</div>
 	<div class="nav-progress-bar"></div>
 	<div class="nav-status-bar"></div>
+</div>
+<div id="mobile-nav">
+	<div class="nav-explore">EXPLORE</div>
+	<div class="dropdown">
+	  <button class="btn dropdown-toggle nav-nca" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+	    NORTHERN
+	    <span class="caret"></span>
+	  </button>
+	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+	  	<div class="invisible-hover"></div>
+	  	<li class="nav-blogger"><a href="#nrthrn-blog-post">
+	  		<div class="blogger-circle" id="brandi-nav"></div>
+	  		<span class="blogger-name">Brandi Riley's</span></br>
+	  		Guide to Northern California</a></li>
+	  	<li role="separator" class="divider"></li>
+	    <li><a href="#camp-ca">Camp California</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#photo-op">Photo Op: Share-Worthy Northern California Spots</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#article-roadtrip">The Anti “Are We There Yet?” Road Trip</a></li>
+	    <li role="separator" class="divider"></li> 
+	    <li><a href="#kid-attractions">8 Must-See Kid-Friendly Attractions</a></li>
+	  </ul>
+	</div>
+	<div class="dropdown">
+	  <button class="btn dropdown-toggle nav-cca" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+	    CENTRAL
+	    <span class="caret"></span>
+	  </button>
+	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+	  	<div class="invisible-hover"></div>
+	  	<li class="nav-blogger"><a href="#cntrl-blog-post">
+	  		<div class="blogger-circle" id="pattie-nav"></div>
+	  		<span class="blogger-name">Pattie Cordova's</span></br>
+	  		Guide to Central California</a></li>
+	  	<li role="separator" class="divider"></li>
+	     <li><a href="#eduvacation">Edu(va)cation</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#article-meet-cca">Get to Know Central California</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#must-see-parks">4 Outdoor Adventures in Central California</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#article-eats">#EEEEEATS: Family-Friendly Spots in Central California</a></li>
+	  </ul>
+	</div>
+	<div class="dropdown">
+	  <button class="btn dropdown-toggle nav-sca" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+	    SOUTHERN
+	    <span class="caret"></span>
+	  </button>
+	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+	  	<div class="invisible-hover"></div>
+	  	<li class="nav-blogger"><a href="#sthrn-blog-post">
+	  		<div class="blogger-circle" id="justine-nav"></div>
+	  		<span class="blogger-name">Justine Howell's</span></br>
+	  		Guide to Southern California</a></li>
+	  	<li role="separator" class="divider"></li>
+	  	<li><a href="#theme-parks">Thrills, Chills, and Enchantments</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#article-surf-skate">Surf ’n Skate</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#kid-beaches">6 Kid-Friendly Southern California Beaches</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#bella-video">Bella Video TK</a></li>
+	  </ul>
+	</div>
+	<div class="nav-california">CALIFORNIA</div>
+	<div class="nav-progress-bar"></div>
+	<div class="nav-status-bar"></div>
+</div>
 </section>
 
 <section class="hero region full-page" id="nca-hero">
