--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 	</div>
 	<a href="#burney">
 		<ul class="hideContentWrap" id="burney">
-			<li class="hideContentHeader">Burney Falls</li>
+			<li class="hideContentHeader"><h1>Burney Falls</h1></li>
 			<li class="hideContent">
 				<div class="text-box">
 					<p>This 129-foot-tall waterfall is one of the most jaw-dropping sights in North America. Located about 60 miles northeast of Redding, Burney Falls makes a delightful day trip. Take a hike around the falls to reach the optimum viewpoint, the overlook at McArthur-Burney Falls Memorial State Park, and you’ll see why President Teddy Roosevelt referred to the falls as the “eighth wonder of the world.”</p>
@@ -555,7 +555,7 @@
 	</a>
 	<a href="#shasta">
 		<ul class="hideContentWrap" id="shasta">
-			<li class="hideContentHeader">Shasta Lake</li>
+			<li class="hideContentHeader"><h1>Shasta Lake</h1></li>
 			<li class="hideContent">
 				<div class="text-box">
 					<p>The largest lake in California, Shasta, is awash in watery family fun. With a whopping 370 miles of shoreline, it makes it easy to find an activity that involves your favorite watersport—from jet skiing to boating to just plain ol’ swimming. And one not-to-miss landmark is the Shasta Dam; at 602 feet high, it’s the second largest of its kind in the country and the perfect spot for a group photo. If you’re staying overnight, dine right on the water on a dinner cruise.</p>
@@ -566,7 +566,7 @@
 	</a>
 	<a href="#mendocino">
 		<ul class="hideContentWrap" id="mendocino">
-			<li class="hideContentHeader">Mendocino</li>
+			<li class="hideContentHeader"><h1>Mendocino</h1></li>
 			<li class="hideContent">
 				<div class="text-box">
 					<p>Three hours north of San Francisco is the coastal cool town of Mendocino. Kids will love exploring Glass Beach, located about 10 miles north of the town of Mendocino, where deposits of colorful sea glass rest along the coves. One theory for the washed up treasure is that the sea glass is “mermaid tears,” shed every time a sailor is lost at sea. Just be sure not to take any of the glass with you—it’s best left on the beach for other visitors. On the way back to town, visit the Mendocino Coast Botanical Gardens to snap some pictures of its expansive collection of blooms, including its famous rhododendrons. Thirty miles south of town, check out the B Bryan Preserve, where you capture snaps of exotic animals like antelopes, kudus, zebras, and giraffes.</p>
@@ -577,7 +577,7 @@
 	</a>
 	<a href="#eureka">
 		<ul class="hideContentWrap" id="eureka">
-			<li class="hideContentHeader">Eureka</li>
+			<li class="hideContentHeader"><h1>Eureka</h1></li>
 			<li class="hideContent">
 				<div class="text-box">
 					<p>After a drive north through towering redwood forests, you’ll most definitely know when you’ve stumbled upon this Victorian-architecture-laden town along the coast. Eureka, 280 miles north of San Francisco, is not only worth a visit in and of itself—stroll along the seaside boardwalk and on the streets of old town, stopping at the intriguing Clarke Historical Museum. About an hour from Eureka on Highway 299 go hunting for Bigfoot at the Willow Creek-China Flat Museum. You’ll find footprint casts, Bigfoot pictures, and a collection of other odds and ends.</p>
@@ -712,7 +712,7 @@
 	</div>
 	<a href="#great-america">
 		<ul class="hideContentWrap" id="great-america">
-			<li class="hideContentHeader">Something for Everyone</li>
+			<li class="hideContentHeader"><h1>Something for Everyone</h1></li>
 			<li class="hideContent">
 				<h4>California’s Great America</h4>
 				<div class="text-box">
@@ -724,7 +724,7 @@
 	</a>
 	<a href="#gilroy">
 		<ul class="hideContentWrap" id="gilroy">
-			<li class="hideContentHeader">Natural Wonders</li>
+			<li class="hideContentHeader"><h1>Natural Wonders</h1></li>
 			<li class="hideContent">
 				<h4>Gilroy Gardens Family Theme Park</h4>
 				<div class="text-box">
@@ -736,7 +736,7 @@
 	</a>
 	<a href="#discov-kingdom">
 		<ul class="hideContentWrap" id="discov-kingdom">
-			<li class="hideContentHeader">Animal Attractions</li>
+			<li class="hideContentHeader"><h1>Animal Attractions</h1></li>
 			<li class="hideContent">
 				<h4>Six Flags Discovery Kingdom</h4>
 				<div class="text-box">
@@ -748,7 +748,7 @@
 	</a>
 	<a href="#chil-fairyland">
 		<ul class="hideContentWrap" id="chil-fairyland">
-			<li class="hideContentHeader">Where Dreams Come True</li>
+			<li class="hideContentHeader"><h1>Where Dreams Come True</h1></li>
 			<li class="hideContent">
 				<h4>Children’s Fairyland</h4>
 				<div class="text-box">
@@ -760,7 +760,7 @@
 	</a>
 	<a href="#safari-west">
 		<ul class="hideContentWrap" id="safari-west">
-			<li class="hideContentHeader">Wild Things</li>
+			<li class="hideContentHeader"><h1>Wild Things</h1></li>
 			<li class="hideContent">
 				<h4>Safari West</h4>
 				<div class="text-box">
@@ -772,7 +772,7 @@
 	</a>
 	<a href="#fairytale-town">
 		<ul class="hideContentWrap" id="fairytale-town">
-			<li class="hideContentHeader">Tall Tales for Tiny Tots</li>
+			<li class="hideContentHeader"><h1>Tall Tales for Tiny Tots</h1></li>
 			<li class="hideContent">
 				<h4>Fairytale Town</h4>
 				<div class="text-box">
@@ -784,7 +784,7 @@
 	</a>
 	<a href="#sac-zoo">
 		<ul class="hideContentWrap" id="sac-zoo">
-			<li class="hideContentHeader">Animal Instincts</li>
+			<li class="hideContentHeader"><h1>Animal Instincts</h1></li>
 			<li class="hideContent">
 				<h4>Sacramento Zoo</h4>
 				<div class="text-box">
@@ -796,7 +796,7 @@
 	</a>
 	<a href="#funderland">
 		<ul class="hideContentWrap" id="funderland">
-			<li class="hideContentHeader">Toddler Town</li>
+			<li class="hideContentHeader"><h1>Toddler Town</h1></li>
 			<li class="hideContent">
 				<h4>Funderland Amusement Park</h4>
 				<div class="text-box">
@@ -953,7 +953,7 @@
 	</div>
 	<a href="#chabot-space">
 		<ul class="hideContentWrap" id="chabot-space">
-			<li class="hideContentHeader">Chabot Space &amp; Science Center</li>
+			<li class="hideContentHeader"><h1>Chabot Space &amp; Science Center</h1></li>
 			<li class="hideContent">
 				<div class="text-box">
 					<p>Ready for an out-of-this-world adventure? Head to Oakland to take a trip through outer space via Chabot’s state-of-the-art planetarium, or see if you have the right stuff on a simulated space mission in the Challenger Learning Center. The center is great for all ages, including the littlest astronauts, who can enroll in the Tyke Explorers Workshop, which teaches children three to five years old about space, dinosaurs, the human body, and other science topics. Chabot is home to three telescopes open for public viewing—visit after sunset for a spectacular view of the night sky.</p>
@@ -964,7 +964,7 @@
 	</a>
 	<a href="#monterey-aquarium">
 		<ul class="hideContentWrap" id="monterey-aquarium">
-			<li class="hideContentHeader">Monterey Bay Aquarium</li>
+			<li class="hideContentHeader"><h1>Monterey Bay Aquarium</h1></li>
 			<li class="hideContent">
 				<div class="text-box">
 					<p>One of the most renowned aquariums on the planet, the Monterey Bay Aquarium will stun and amaze everyone from infants to the elderly. Located right on Cannery Row in historic Monterey, the aquarium features nearly 200 exhibits in 34 major galleries. Go for the eye-to-fins views of colorful sea creatures, and be sure to check out daily feedings of playful penguins and otters. Underwater enthusiast in the family? Schedule a family tour for a behind-the-scenes look at life at the aquarium.</p>
@@ -975,7 +975,7 @@
 	</a>
 	<a href="#academy-sciences">
 		<ul class="hideContentWrap" id="academy-sciences">
-			<li class="hideContentHeader">California Academy of Sciences</li>
+			<li class="hideContentHeader"><h1>California Academy of Sciences</h1></li>
 			<li class="hideContent">
 				<div class="text-box">
 					<p>Housing nearly 46 million specimens, the California Academy of Sciences in San Francisco is one of the biggest attractions of its kind in the world. Between the planetarium, aquarium, and natural history museum, it’s hard to know where to go first (and you can’t go wrong). Don’t miss the Osher Rainforest, a four-story neo-tropical rainforest where you’ll encounter exotic birds and reptiles, amphibians, spiders, and Amazonian fish. Also, be sure to buy your tickets online in advance so you can skip the line when you arrive.</p>
@@ -986,7 +986,7 @@
 	</a>
 	<a href="#exploratorium">
 		<ul class="hideContentWrap" id="exploratorium">
-			<li class="hideContentHeader">Exploratorium</li>
+			<li class="hideContentHeader"><h1>Exploratorium</h1></li>
 			<li class="hideContent">
 				<div class="text-box">
 					<p>A public learning laboratory, this San Francisco institution sits at the intersection of science and art. Often described as a mad scientist’s penny arcade, a scientific funhouse, and an experimental laboratory all rolled into one, the center boasts more than 600 hands-on exhibits and displays—a tinkerer’s paradise. You can also explore a dark maze using only your hands (discovering some interesting textures along the way), or channel your inner caveman (or cavewoman) and make your own cave petroglyph. A travel tip:  Schedule your visit on a weekday, as weekends are very popular with locals and tourists alike.</p>
@@ -997,7 +997,7 @@
 	</a>
 	<a href="#tech-museum">
 		<ul class="hideContentWrap" id="tech-museum">
-			<li class="hideContentHeader">The Tech Museum of Innovation</li>
+			<li class="hideContentHeader"><h1>The Tech Museum of Innovation</h1></li>
 			<li class="hideContent">
 				<div class="text-box">
 					<p>It seems perfectly fitting that Silicon Valley would have its own state-of-the-art, technology-centric museum that San Jose locals call “The Tech.” Going beyond the usual science museum, The Tech empowers guests to explore biotech, cyber security, design and build their own robots, and play with hundreds of interactive exhibits and displays. When your brain is tuckered, sit back and enjoy films on 9,000-plus square feet of wraparound IMAX screen (the largest IMAX dome theater in the western United States), or check out one of the most geektacular gift shops around.</p>
@@ -1008,7 +1008,7 @@
 	</a>
 	<a href="#sb-natural-history">
 		<ul class="hideContentWrap" id="sb-natural-history">
-			<li class="hideContentHeader">Santa Barbara Museum of Natural History</li>
+			<li class="hideContentHeader"><h1>Santa Barbara Museum of Natural History</h1></li>
 			<li class="hideContent">
 				<div class="text-box">
 					<p>Celebrating its 100th anniversary in 2016, the museum encourages adults and kids alike to reconnect with nature. Wear comfortable walking shoes on your visit—after gawking at the 74-foot blue whale skeleton, you can remind yourself that you’re in subtropical California and head to the museum’s backyard to play on the water course, build a fort, and search for critters. From there you can also hike the Nature Trail along Mission Creek.</p>
@@ -1157,7 +1157,7 @@
 	</div>
 	<a href="#yosemite">
 		<ul class="hideContentWrap" id="yosemite">
-			<li class="hideContentHeader">Towering Granite and Plummeting Waterfalls</li>
+			<li class="hideContentHeader"><h1>Towering Granite and Plummeting Waterfalls</h1></li>
 			<li class="hideContent">
 				<h4>Yosemite National Park</h4>
 				<div class="text-box">
@@ -1169,7 +1169,7 @@
 	</a>
 	<a href="#mammoth-lakes">
 		<ul class="hideContentWrap" id="mammoth-lakes">
-			<li class="hideContentHeader">Magnificent Mountains, Sparkling Lakes, and Fabulous Fairways</li>
+			<li class="hideContentHeader"><h1>Magnificent Mountains, Sparkling Lakes, and Fabulous Fairways</h1></li>
 			<li class="hideContent">
 				<h4>Mammoth Lakes</h4>
 				<div class="text-box">
@@ -1181,7 +1181,7 @@
 	</a>
 	<a href="#sequoia-kings">
 		<ul class="hideContentWrap" id="sequoia-kings">
-			<li class="hideContentHeader">Skyscraping Trees, Deep Canyons, and Thundering Rivers</li>
+			<li class="hideContentHeader"><h1>Skyscraping Trees, Deep Canyons, and Thundering Rivers</h1></li>
 			<li class="hideContent">
 				<h4>Sequoia and Kings Canyon National Parks</h4>
 				<div class="text-box">
@@ -1193,7 +1193,7 @@
 	</a>
 	<a href="#death-valley">
 		<ul class="hideContentWrap" id="death-valley">
-			<li class="hideContentHeader">Colossal Sand Dunes</br>and Living Colors</li>
+			<li class="hideContentHeader"><h1>Colossal Sand Dunes and Living Colors</h1></li>
 			<li class="hideContent">
 				<h4>Death Valley National Park</h4>
 				<div class="text-box">
@@ -1546,7 +1546,7 @@
 	</div>
 	<a href="#seaworld">
 		<ul class="hideContentWrap" id="seaworld">
-			<li class="hideContentHeader">Make a Splash</li>
+			<li class="hideContentHeader"><h1>Make a Splash</h1></li>
 			<li class="hideContent">
 				<h4>SeaWorld San Diego</h4>
 				<div class="text-box">
@@ -1558,7 +1558,7 @@
 	</a>
 	<a href="#knotts-berry">
 		<ul class="hideContentWrap" id="knotts-berry">
-			<li class="hideContentHeader">Go West</li>
+			<li class="hideContentHeader"><h1>Go West</h1></li>
 			<li class="hideContent">
 				<h4>Knott’s Berry Farm</h4>
 				<div class="text-box">
@@ -1570,7 +1570,7 @@
 	</a>
 	<a href="#magic-mountain">
 		<ul class="hideContentWrap" id="magic-mountain">
-			<li class="hideContentHeader">Chase High Speeds</li>
+			<li class="hideContentHeader"><h1>Chase High Speeds</h1></li>
 			<li class="hideContent">
 				<h4>Six Flags Magic Mountain</h4>
 				<div class="text-box">
@@ -1582,7 +1582,7 @@
 	</a>
 	<a href="#disneyland">
 		<ul class="hideContentWrap" id="disneyland">
-			<li class="hideContentHeader">Make Your Dreams Come True</li>
+			<li class="hideContentHeader"><h1>Make Your Dreams Come True</h1></li>
 			<li class="hideContent">
 				<h4>Disneyland Resort</h4>
 				<div class="text-box">
@@ -1594,7 +1594,7 @@
 	</a>
 	<a href="#legoland">
 		<ul class="hideContentWrap" id="legoland">
-			<li class="hideContentHeader">Entertain “Kids” of All Ages</li>
+			<li class="hideContentHeader"><h1>Entertain “Kids” of All Ages</h1></li>
 			<li class="hideContent">
 				<h4>LEGOLAND California</h4>
 				<div class="text-box">
@@ -1606,7 +1606,7 @@
 	</a>
 	<a href="#castle-park">
 		<ul class="hideContentWrap" id="castle-park">
-			<li class="hideContentHeader">Get in the Swing of Things</li>
+			<li class="hideContentHeader"><h1>Get in the Swing of Things</h1></li>
 			<li class="hideContent">
 				<h4>Castle Park, Riverside</h4>
 				<div class="text-box">
@@ -1618,7 +1618,7 @@
 	</a>
 	<a href="#raging-waters">
 		<ul class="hideContentWrap" id="raging-waters">
-			<li class="hideContentHeader">Make Waves</li>
+			<li class="hideContentHeader"><h1>Make Waves</h1></li>
 			<li class="hideContent">
 				<h4>Raging Waters, Los Angeles</h4>
 				<div class="text-box">
@@ -1630,7 +1630,7 @@
 	</a>
 	<a href="#universal">
 		<ul class="hideContentWrap" id="universal">
-			<li class="hideContentHeader">Turn Fantasy Into Reality</li>
+			<li class="hideContentHeader"><h1>Turn Fantasy Into Reality</h1></li>
 			<li class="hideContent">
 				<h4>Universal Studios Hollywood</h4>
 				<div class="text-box">
@@ -1740,7 +1740,7 @@
 	</div>
 	<a href="#coronado">
 		<ul class="hideContentWrap" id="coronado">
-			<li class="hideContentHeader">Coronado Central Beach</li>
+			<li class="hideContentHeader"><h1>Coronado Central Beach</h1></li>
 			<li class="hideContent">
 				<h4>Coronado</h4>
 				<div class="text-box">
@@ -1752,7 +1752,7 @@
 	</a>
 	<a href="#mission-bay">
 		<ul class="hideContentWrap" id="mission-bay">
-			<li class="hideContentHeader">Mission Bay</li>
+			<li class="hideContentHeader"><h1>Mission Bay</h1></li>
 			<li class="hideContent">
 				<h4>San Diego</h4>
 				<div class="text-box">
@@ -1764,7 +1764,7 @@
 	</a>
 	<a href="#la-jolla">
 		<ul class="hideContentWrap" id="la-jolla">
-			<li class="hideContentHeader">La Jolla Shores</li>
+			<li class="hideContentHeader"><h1>La Jolla Shores</h1></li>
 			<li class="hideContent">
 				<h4>La Jolla</h4>
 				<div class="text-box">
@@ -1776,7 +1776,7 @@
 	</a>
 	<a href="#carlsbad">
 		<ul class="hideContentWrap" id="carlsbad">
-			<li class="hideContentHeader">South Carlsbad State Beach</li>
+			<li class="hideContentHeader"><h1>South Carlsbad State Beach</h1></li>
 			<li class="hideContent">
 				<h4>Carlsbad</h4>
 				<div class="text-box">
@@ -1788,7 +1788,7 @@
 	</a>
 	<a href="#crystal-cove">
 		<ul class="hideContentWrap" id="crystal-cove">
-			<li class="hideContentHeader">Crystal Cove</li>
+			<li class="hideContentHeader"><h1>Crystal Cove</h1></li>
 			<li class="hideContent">
 				<h4>Laguna Beach</h4>
 				<div class="text-box">
@@ -1800,7 +1800,7 @@
 	</a>
 	<a href="#santa-monica">
 		<ul class="hideContentWrap" id="santa-monica">
-			<li class="hideContentHeader">Santa Monica Beach</li>
+			<li class="hideContentHeader"><h1>Santa Monica Beach</h1></li>
 			<li class="hideContent">
 				<h4>Santa Monica</h4>
 				<div class="text-box">
