--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,8 @@
 			<div class="col-md-5 col-md-offset-1">
 				<img class="animateblock btm" src="images/meet-cca/meet-cca1.jpg">
 				<div class="caption">
-					<p>Lorem ipsum dolor amet. <span class="italc cred inline">Getty Images</span></p>
+					<p>Santa Barbara Mission</p>
+					<p class="italc cred inline no-left-margin">Sashahaltam/Shutterstock</p>
 				</div>
 			</div>
 		</div>
@@ -1130,16 +1131,16 @@
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
-					<p class="italc cred">Getty Images</p>
+					<p>Bigby Bridge, Big Sur</p>
+					<p class="italc cred">Thomas Kurmeier/Getty Images</p>
 				</div>
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
-					<p class="italc cred">Getty Images</p>
+					<p>Montana De Oro State Park</p>
+					<p class="italc cred">Ron Thomas/Getty Images</p>
 				</div>
 			</div>
 		</div>
@@ -1157,7 +1158,7 @@
 			<div class="col-md-9">
 				<img class="over animateblock btm" src="images/meet-cca/meet-cca4.jpg">
 				<div class="caption">
-					<p class="italc cred inline">Getty Images</p>
+					<p class="italc cred inline">Chris Hendrickson/Getty Images</p>
 				</div>
 			</div>
 		</div>
@@ -1182,16 +1183,16 @@
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Lorem ipsum dolor sit amet.</p>
-					<p class="italc cred">Getty Images</p>
+					<p>Yosemite National Park</p>
+					<p class="italc cred">Adam Hester/Getty Images</p>
 				</div>
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Lorem ipsum dolor sit amet.</p>
-					<p class="italc cred">Getty Images</p>
+					<p>Yosemite National Park</p>
+					<p class="italc cred">Adam Hester/Getty Images</p>
 				</div>
 			</div>
 		</div>	
@@ -1204,7 +1205,8 @@
 			<div class="col-md-9">
 				<img class="over animateblock btm" src="images/meet-cca/meet-cca7.jpg">
 				<div class="caption">
-					<p class="italc cred inline">Getty Images</p>
+					<p>Mono Lake Beach</p>
+					<p class="italc cred inline no-left-margin">Alan Levenson/Getty Images</p>
 				</div>
 			</div>
 		</div>
