Credit to commit

--- a/index.html
+++ b/index.html
@@ -1212,6 +1212,7 @@
 		</div>
 	</div>
 </section> 
+<!-- credit to commit -->
 
 <!-- Must-See Parks -->
 <img class="section-marker" src="images/cntrl-sect-icon.svg">
