--- a/index.html
+++ b/index.html
@@ -875,6 +875,16 @@
 	</a>
 </section>
 
+<section class="hero region full-page" id="cca-hero">
+	<img src="assets/VCA_white.gif" class="vca-hero-logo">
+	<img src="images/central-title.svg" class="main-title">
+	<video autoplay loop muted>
+		<source src="video/VCA_Family_Hero_Central_v2.webmhd.webm" type="video/webm">
+ 		<source src="video/VCA_Family_Hero_Central_v2.mp4" type="video/mp4">
+		Your browser does not support the video tag.
+	</video>
+</section>
+
 <!-- PATTIE POST -->
 <section class="bg-img-container-wrap" id="cntrl-blog-post">
 	<div class="container-fluid article blogger-post">
