Added Credits to Photos + Responsive

--- a/index.html
+++ b/index.html
@@ -1283,9 +1283,12 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 no-pic">
 				<h3>Farm Fresh Fruit</h3>
 				<p>With a double-decker Venetian carousel and a train dubbed Casa de Choo Choo, <span class="bold">Casa de Fruta</span> in Hollister (roughly 50 miles inland from Santa Cruz) is a dream pit stop for kids. Visit the roadside stand for just-picked produce, and load up on fruits and vegetables before hopping back in the car—they’ll be the perfect road-trip snack.</p>
+				<div class="caption">
+					<p class="italc cred">Creative Crop/Getty Images</p>
+				</div>
 			</div>
 		</div>
 		<div class="row">
@@ -1300,9 +1303,12 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 no-pic">
 				<h3>Classic Mexican</h3>
 				<p>Adventurers headed to the Sierra National Forest or the southern end of Yosemite National Park should make a pit stop in Fresno at <span class="bold">Castillo’s</span>. The family-run restaurant has been serving up enchiladas, tamales, and tacos since 1955, and it’s famous for warm service, and raved-about house made tortillas and salsa (aka, crowd pleasers).</p>
+				<div class="caption">
+					<p class="italc cred">Steve Giralt/Offset</p>
+				</div>
 			</div>
 		</div>
 		<div class="row">
@@ -1317,9 +1323,12 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 no-pic">
 				<h3>Save Room for Dessert</h3>
 				<p>No family vacation is complete without indulging in something sweet. After sights like Sequoia National Park, home to some of the largest trees in the world, make a pit stop in Hanford at <span class="bold">Superior Dairy</span>. Settle into the charming vinyl booths and enjoy freshly made, classic and seasonal scoops. Bon appetite!</p>
+				<div class="caption">
+					<p class="italc cred">Unpict/Getty Images</p>
+				</div>
 			</div>
 		</div>
 		<div class="row">
