Added Bella Link + Headline

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	    		<li role="separator" class="divider"></li>
 	    		<li><a href="#kid-beaches">6 Kid-Friendly Southern California Beaches</a></li>
 	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#bella-video">Bella Video TK</a></li>
+	    		<li><a href="#video-bella">Bella Kenworthy Brings Girl Power to the Skate Park</a></li>
 	  		</ul>
 		</div>
 	</div>
@@ -171,7 +171,7 @@
 	    <li role="separator" class="divider"></li>
 	    <li><a href="#kid-beaches">6 Kid-Friendly Southern California Beaches</a></li>
 	    <li role="separator" class="divider"></li>
-	    <li><a href="#bella-video">Bella Video TK</a></li>
+	    <li><a href="#video-bella">Bella Kenworthy Brings Girl Power to the Skate Park</a></li>
 	  </ul>
 	</div>
 	<div class="nav-progress-bar"></div>
@@ -239,7 +239,7 @@
 	    <li role="separator" class="divider"></li>
 	    <li><a href="#kid-beaches">6 Kid-Friendly Southern California Beaches</a></li>
 	    <li role="separator" class="divider"></li>
-	    <li><a href="#bella-video">Bella Video TK</a></li>
+	    <li><a href="#video-bella">Bella Kenworthy Brings Girl Power to the Skate Park</a></li>
 	  </ul>
 	</div>
 	<div class="nav-california">CALIFORNIA</div>
