--- a/index.html
+++ b/index.html
@@ -439,13 +439,13 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-8 col-xs-offset-2 col-md-8 col-md-offset-2">
+			<div class="col-xs-10 col-md-8 col-md-offset-2">
 				<h2>Northern California offers some of the most stunning and diverse campsites in the world—explore these six options.</h2>
 				<p>Whether you want to sleep at the feet of giants in Redwoods National Park or wake up at the water’s edge in Lake Tahoe, adventure seekers will marvel at Northern California’s options. From off-the-grid rustic sites to the ultimate glamping experience, here are six options for planning your next camping excursion.</p>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-12 col-md-6">
 				<div class="scroll-list-box">
 					<div class="box-header">
 						<div class="box-header-num">1</div>
@@ -463,12 +463,12 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6 col-md-offset-6 animateblock btm">
+			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
 				<a class="fancybox" href="images/camp-ca/steep-ravine.jpg"><img src="images/camp-ca/steep-ravine.jpg"></a>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-12 col-md-6">
 				<div class="scroll-list-box">
 					<div class="box-header">
 						<div class="box-header-num">2</div>
@@ -486,12 +486,12 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6 col-md-offset-6 animateblock btm">
+			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
 				<a class="fancybox" href="images/camp-ca/mackerricher.jpg"><img src="images/camp-ca/mackerricher.jpg"></a>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-12 col-md-6">
 				<div class="scroll-list-box">
 					<div class="box-header one-line">
 						<div class="box-header-num">3</div>
@@ -509,12 +509,12 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6 col-md-offset-6 animateblock btm">
+			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
 				<a class="fancybox" href="images/camp-ca/beach.jpg"><img src="images/camp-ca/beach.jpg"></a>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-12 col-md-6">
 				<div class="scroll-list-box">
 					<div class="box-header one-line">
 						<div class="box-header-num">4</div>
@@ -532,12 +532,12 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6 col-md-offset-6 animateblock btm">
+			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
 				<a class="fancybox" href="images/camp-ca/tomales.jpg"><img src="images/camp-ca/tomales.jpg"></a>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-12 col-md-6">
 				<div class="scroll-list-box">
 					<div class="box-header one-line">
 						<div class="box-header-num">5</div>
@@ -555,14 +555,14 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6 col-md-offset-6">
+			<div class="col-xs-12 col-md-6 col-md-offset-6">
 				<div class="animateblock btm">
 					<a class="fancybox" href="images/camp-ca/sequoia.jpg"><img src="images/camp-ca/sequoia.jpg"></a>
 				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-12 col-md-6">
 				<div class="scroll-list-box">
 					<div class="box-header">
 						<div class="box-header-num">6</div>
@@ -580,14 +580,14 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6 col-md-offset-6">
+			<div class="col-xs-12 col-md-6 col-md-offset-6">
 				<div class="animateblock btm">
 					<a class="fancybox" href="images/camp-ca/bigbasin.jpg"><img src="images/camp-ca/bigbasin.jpg"></a>
 				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
+			<div class="col-xs-12 col-md-8 col-md-offset-2">
 				<p>Check out eight more spots for adventurous kids <a href="http://www.visitcalifornia.com/feature/8-great-spots-take-adventurous-daughter">here</a>.</p>
 				<img src="assets/CA Logo_Dream Big_Color.png" class="vca-logo-color">
 			</div>
